--- a/Ecommerce-Fe/index.html
+++ b/Ecommerce-Fe/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Parisienne&display=swap"
       rel="stylesheet"
     />
-    <title>HC.VN chuyên cung cấp máy tính xách tay</title>
+    <title>Computer Store - Cửa hàng laptop uy tín, chuyên nghiệp</title>
   </head>
   <body>
     <div id="root"></div>
